# docs/swagger.json
@@ -30,7 +30,9 @@
   "paths": {
     "/auth/register": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Registering a new user",
         "operationId": "registerUser",
         "description": "Registration of a new user in the system",
@@ -77,7 +79,9 @@
     },
     "/auth/login": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Log in to the system",
         "operationId": "loginUser",
         "description": "Sign in existing user",
@@ -92,7 +96,10 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["email", "password"],
+                "required": [
+                  "email",
+                  "password"
+                ],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -116,7 +123,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -153,76 +164,11 @@
         }
       }
     },
-    "/auth/reset-pwd": {
-      "put": {
-        "tags": ["Auth"],
-        "summary": "Change password",
-        "operationId": "resetUserPassword",
-        "description": "Allows the user to change the old password to a new one if the old password is correct.",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["oldPassword", "newPassword"],
-                "properties": {
-                  "oldPassword": {
-                    "type": "string",
-                    "description": "Old user password",
-                    "example": "password123"
-                  },
-                  "newPassword": {
-                    "type": "string",
-                    "description": "New user password",
-                    "example": "password098"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Password successfully changed",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "required": ["status", "message"],
-                  "properties": {
-                    "status": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Password successfully changed"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized or old password is incorrect",
-            "$ref": "#/components/responses/401"
-          },
-          "404": {
-            "description": "Unauthorized or old password is incorrect",
-            "$ref": "#/components/responses/404"
-          }
-        }
-      }
-    },
     "/auth/logout": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Log out of the system",
         "operationId": "logoutUser",
         "description": "Logout user from the system by clearing authentication tokens and session",
@@ -248,7 +194,9 @@
     },
     "/users/{id}": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Get User by id",
         "operationId": "getUserById",
         "description": "Retrieve a user data with the given id.",
@@ -276,7 +224,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -309,7 +261,9 @@
         }
       },
       "patch": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Update user data",
         "operationId": "updateUserById",
         "description": "Update a user's information by id.",
@@ -351,8 +305,21 @@
                   "gender": {
                     "description": "User's gender identity. Options: male, female.",
                     "type": "string",
-                    "enum": ["male", "female"],
+                    "enum": [
+                      "male",
+                      "female"
+                    ],
                     "example": "female"
+                  },
+                  "oldPassword": {
+                    "type": "string",
+                    "description": "Old user password",
+                    "example": "password123"
+                  },
+                  "newPassword": {
+                    "type": "string",
+                    "description": "New user password",
+                    "example": "password098"
                   }
                 }
               }
@@ -400,7 +367,9 @@
     },
     "/users/{id}/avatar": {
       "patch": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Update user avatar",
         "operationId": "updateAvatar",
         "description": "Upload or update user profile avatar image",
@@ -433,7 +402,9 @@
                     "format": "binary"
                   }
                 },
-                "required": ["avatar"]
+                "required": [
+                  "avatar"
+                ]
               }
             }
           }
@@ -485,7 +456,9 @@
     },
     "/water": {
       "post": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Add water",
         "operationId": "addWaterRecord",
         "description": "Add new water record",
@@ -499,7 +472,10 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["date", "waterVolume"],
+                "required": [
+                  "date",
+                  "waterVolume"
+                ],
                 "properties": {
                   "date": {
                     "description": "Date",
@@ -525,7 +501,12 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["date", "waterVolume", "userId", "_id"],
+                  "required": [
+                    "date",
+                    "waterVolume",
+                    "userId",
+                    "_id"
+                  ],
                   "properties": {
                     "date": {
                       "type": "string",
@@ -556,7 +537,9 @@
     },
     "/water/{id}": {
       "delete": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Delete water record",
         "operationId": "deleteWaterRecord",
         "description": "Delete water record",
@@ -586,7 +569,9 @@
         }
       },
       "patch": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Update record by id",
         "operationId": "updateWaterRecord",
         "description": "Update record by id",
@@ -611,7 +596,9 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["waterVolume"],
+                "required": [
+                  "waterVolume"
+                ],
                 "properties": {
                   "waterVolume": {
                     "description": "Water volume",
@@ -644,7 +631,9 @@
     },
     "/water/today": {
       "get": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Get list of water records",
         "operationId": "getTodayWater",
         "description": "Get list of water records from today",
@@ -660,7 +649,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["percentage", "totalAmount", "records"],
+                  "required": [
+                    "percentage",
+                    "totalAmount",
+                    "records"
+                  ],
                   "properties": {
                     "percentage": {
                       "type": "string",
@@ -690,7 +683,9 @@
     },
     "/water/month": {
       "get": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Get statistic for month",
         "operationId": "getMonthlyStats",
         "description": "Get statistic for month",
@@ -729,7 +724,12 @@
                   "description": "List of days statistics",
                   "items": {
                     "type": "object",
-                    "required": ["date", "dailyGoal", "percentage", "entries"],
+                    "required": [
+                      "date",
+                      "dailyGoal",
+                      "percentage",
+                      "entries"
+                    ],
                     "properties": {
                       "date": {
                         "type": "string",
@@ -781,11 +781,18 @@
             "example": "password123"
           }
         },
-        "required": ["email", "password"]
+        "required": [
+          "email",
+          "password"
+        ]
       },
       "auth201": {
         "type": "object",
-        "required": ["status", "message", "data"],
+        "required": [
+          "status",
+          "message",
+          "data"
+        ],
         "properties": {
           "status": {
             "type": "integer",
@@ -813,7 +820,10 @@
       },
       "users": {
         "type": "object",
-        "required": ["email", "password"],
+        "required": [
+          "email",
+          "password"
+        ],
         "properties": {
           "name": {
             "description": "User's name",
@@ -838,7 +848,10 @@
           "gender": {
             "description": "User's gender identity. Options may include male, female",
             "type": "string",
-            "enum": ["male", "female"],
+            "enum": [
+              "male",
+              "female"
+            ],
             "example": "female"
           },
           "avatar": {
@@ -865,7 +878,12 @@
       },
       "waterRecord": {
         "type": "object",
-        "required": ["date", "waterVolume", "userId", "_id"],
+        "required": [
+          "date",
+          "waterVolume",
+          "userId",
+          "_id"
+        ],
         "properties": {
           "date": {
             "type": "string",
@@ -893,7 +911,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -905,7 +927,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -934,7 +958,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -946,7 +974,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -965,7 +995,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -977,7 +1011,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -1023,7 +1059,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1035,7 +1075,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
