# src/controllers/auth.js
@@ -37,17 +37,6 @@ export const loginController = async (req, res) => {
   });
 };
 
-export const resetPasswodController = async (req, res) => {
-  const { oldPassword, newPassword } = req.body;
-  const { _id } = req.user;
-
-  await authServices.resetPassword(_id, oldPassword, newPassword);
-
-  res.status(200).json({
-    status: 200,
-    message: 'Password successfully changed!',
-  });
-};
 
 export const logoutController = async (req, res) => {
   if (req.cookies.sessionId) {
