# src/routers/auth.js
@@ -5,9 +5,9 @@ import * as authController from '../controllers/auth.js';
 import {
   authLoginSchema,
   authRegisterSchema,
-  resetPasswordSchema,
+  // resetPasswordSchema,
 } from '../validation/auth.js';
-import { authenticate } from '../middlewares/authenticate.js';
+// import { authenticate } from '../middlewares/authenticate.js';
 
 const authRouter = Router();
 
@@ -26,12 +26,12 @@ authRouter.post(
   ctrlWrapper(authController.loginController),
 );
 
-authRouter.put(
-  '/reset-pwd',
-  authenticate,
-  validateBody(resetPasswordSchema),
-  ctrlWrapper(authController.resetPasswodController),
-);
+// authRouter.put(
+//   '/reset-pwd',
+//   authenticate,
+//   validateBody(resetPasswordSchema),
+//   ctrlWrapper(authController.resetPasswodController),
+// );
 
 authRouter.post('/logout', ctrlWrapper(authController.logoutController));
 
